Agregando el codigo base

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             Parametros del juego
         </p>
         <div class="gameboard">
-
+            <div class="color celeste left" id="celeste" data-color="celeste">1</div>
+            <div class="color violeta right" id="violeta" data-color="violeta">2</div>
+            <div class="color naranja left" id="naranja" data-color="naranja">3</div>
+            <div class="color verde rights" id="verde" data-color="verde">4</div>
+            <button class="btn-start" id="btnEmpezar" onclick="empezarJuego()">Empezar Juego</button>
         </div>
     </header>
     <script src="./index.js"></script>
