--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <header>
-        <h1>Juego de Simon Dice / Fundamentos de JS</h1>
+        <!-- <h1>Juego de Simon Dice / Fundamentos de JS</h1>
         <p>
             Parametros del juego
-        </p>
+        </p> -->
         <div class="gameboard">
-            <div class="color celeste left" id="celeste" data-color="celeste">1</div>
-            <div class="color violeta right" id="violeta" data-color="violeta">2</div>
-            <div class="color naranja left" id="naranja" data-color="naranja">3</div>
-            <div class="color verde rights" id="verde" data-color="verde">4</div>
-            <button class="btn-start" id="btnEmpezar" onclick="empezarJuego()">Empezar Juego</button>
+            <div class="color celeste left" id="celeste" data-color="celeste"></div>
+            <div class="color violeta right" id="violeta" data-color="violeta"></div>
+            <div class="color naranja left" id="naranja" data-color="naranja"></div>
+            <div class="color verde right" id="verde" data-color="verde"></div>
+            <button class="btn-start" id="btnEmpezar" onclick="empezarJuego()">Empezar a jugar !</button>
         </div>
     </header>
     <script src="./index.js"></script>
